2000-06-28  Radek Doulik  <rodo@helixcode.com>

	* configure.in: gconf testing independent of gconf.m4
	define HAVE_GCONF when gconf found

2000-06-19  Ettore Perazzoli  <ettore@helixcode.com>

	* acconfig.h: `PREFIX'.

	* configure.in (GTKHTML_LIBS): AC_DEFINE `PREFIX'.

2000-06-17  Anders Carlsson  <andersca@gnu.org>

	* configure.in (have_gconf): Check if GCONF is installed before 
	building the capplet. 

2000-06-14  Radek Doulik  <rodo@helixcode.com>

	* configure.in: call AM_PATH_GCONF
	use AM_PATH_GCONF with gconf-gtk parameter
	(GTKHTML_INCLUDEDIR): added gconf libs and cflags to gtkhtml libs
	and cflags

	* added new dir capplet

2000-06-12  Radek Doulik  <rodo@helixcode.com>

	* configure.in: call GNOME_INIT with capplet

2000-06-02  Larry Ewing  <lewing@helixcode.com>

	* Version 0.4.

2000-06-01  Larry Ewing  <lewing@helixcode.com>

	* Version 0.3.

2000-06-01  Ettore Perazzoli  <ettore@helixcode.com>

	* configure.in: Fixed gnome-print check as reported by Michael.

2000-05-21  Ettore Perazzoli  <ettore@helixcode.com>

	* configure.in: Bump `GTKHTML_CURRENT' and reset `GTKHTML_AGE' to
	reflect the API changes.

2000-05-09  JP Rosevear  <jpr@arcavia.com>

	* configure.in : Properly run the oaf var comparision so 
	the conditional gets defined properly.

2000-05-09  Ettore Perazzoli  <ettore@helixcode.com>

	* Version 0.2.

2000-05-09  Ettore Perazzoli  <ettore@helixcode.com>

	* configure.in: Bump libtool numbers.

2000-05-03  Jacob Berkman  <jacob@helixcode.com>

	* configure.in (GTKHTML_LIBS): s/ndnl/dnl/

2000-05-01  Ettore Perazzoli  <ettore@helixcode.com>

	* configure.in: Spell `Bonobo' correctly.

2000-04-27  Ettore Perazzoli  <ettore@helixcode.com>

	* acconfig.h: Added `USING_OAF'.

	* configure.in: Check if Bonob is OAFized and, if so, define
	`USING_OAF'.

2000-04-19  Pavel Cisler  <pavel@eazel.com>

	* configure.in: Made configure respect --without-bonobo
	properly.

2000-04-15  Radek Doulik  <rodo@helixcode.com>
