@@ -16,7 +16,6 @@
 #undef HAVE_GNU_REGEX
 #undef USING_OAF
 #undef PREFIX
-#undef HAVE_GCONF
 
 @BOTTOM@
 /* This is from libglade */
