@@ -138,19 +138,18 @@ AC_ARG_WITH(gconf,
 	fi
 )
 
+GCONF_CFLAGS=""
+GCONF_LIBS=""
 if $try_gconf; then
 	AC_MSG_CHECKING([for gconf])
 	if gconf-config --version > /dev/null 2>&1; then
 		gconf_ver=`gconf-config --version`
 		have_gconf=true
-		AC_DEFINE(HAVE_GCONF)
-		GCONF_CFLAGS="`gconf-config --cflags gconf-gtk`"
+		GCONF_CFLAGS="`gconf-config --cflags gconf-gtk` -DGTKHTML_HAVE_GCONF"
 		GCONF_LIBS="`gconf-config --libs gconf-gtk`"
 		AC_MSG_RESULT([found ($gconf_ver)])
 	else
 		have_gconf=false
-		GCONF_CFLAGS=""
-		GCONF_LIBS=""
 		AC_MSG_RESULT([not found, gtkhtml will be built without gconf support])
 	fi
 fi
